--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "react-bootstrap": "^0.32.4",
+    "react-metismenu": "^1.4.0",
+    "react-metismenu-router-link": "^2.1.0",
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
